# dev-orchestrator

./: .env.example  .gitignore  DEV_TASK_ORCHESTRATOR_PLAN.md  README.md  project-brief.md  pyproject.toml  requirements.txt
.ai-flow/core/: config.json
.ai-flow/prompts/backend/: flow-build-phase-10.md  flow-build-phase-3.md  flow-build-phase-4.md  flow-build-phase-5.md  flow-build-phase-8.md  flow-build-phase-9.md  flow-check-review.md  flow-commit.md  flow-docs-sync.md  flow-work-feature.md  flow-work-resume.md  flow-work.md
.ai-flow/prompts/frontend/: flow-build-phase-1.md  flow-build-phase-10.md  flow-build-phase-2.md  flow-build-phase-6.md  flow-build-phase-8.md  flow-build-phase-9.md  flow-build.md  flow-check.md  flow-commit.md  flow-docs-sync.md  flow-work-fix.md  flow-work-refactor.md  flow-work.md
.ai-flow/prompts/mobile/: flow-build-phase-0.md  flow-build-phase-10.md  flow-build-phase-7.md  flow-build-phase-8.md  flow-build-phase-9.md  flow-build.md  flow-check-test.md  flow-commit.md  flow-docs-sync.md  flow-work-fix.md  flow-work.md
.ai-flow/prompts/shared/: mermaid-guidelines.md  scope-levels.md  smart-skip-preflight.md  story-points.md  task-format.md  task-summary-template.md
.ai-flow/templates/: .env.example.template  AGENT.template.md  README.template.md  ai-instructions.template.md  copilot-instructions.template.md  project-brief.template.md  work.template.md
.ai-flow/templates/docs/: api.template.md  architecture.template.md  business-flows.template.md  code-standards.template.md  contributing.template.md  data-model.template.md  operations.template.md  testing.template.md
.ai-flow/templates/specs/: configuration.template.md  security.template.md
.github/prompts/: flow-build.prompt.md
docs/: architecture.md  code-standards.md  data-model.md  implementation-roadmap.md  operations.md  testing.md  user-stories.md
specs/: security.md
src/: __init__.py  main.py
src/agents/: __init__.py  executor.py  intent_classifier.py  plan_generator.py
src/chat/: __init__.py  telegram_bot.py
src/core/: __init__.py  config.py  logging_config.py  orchestrator.py
src/git/: __init__.py  github_manager.py
src/models/: __init__.py  database.py  task.py
src/utils/: __init__.py  async_utils.py
tests/: __init__.py  conftest.py
